--- a/src/models/dimReduction.ipynb
+++ b/src/models/dimReduction.ipynb
@@ -29,7 +29,15 @@
     "\n",
     "setModifier = SetModifier()\n",
     "setCreator = SetCreator()\n",
-    "dataset1 = setCreator.getSetList1()"
+    "dataset1 = setCreator.getSetList1()\n",
+    "dataset2 = setCreator.getSetList2()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PCA"
    ]
   },
   {
@@ -49,11 +57,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Gaussian Projection"
+   ]
   },
   {
    "cell_type": "code",
@@ -61,10 +69,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for currData in dataset1:\n",
+    "for currData in dataset2:\n",
     "    currData['train'] = currData['train'].fillna(0)\n",
-    "    gaussian_rnd_proj = GaussianRandomProjection(random_state=42)\n",
-    "    X_reduced = gaussian_rnd_proj.fit_transform(currData['train'])"
+    "    gaussian_rnd_proj = GaussianRandomProjection(random_state=0, n_components=25)\n",
+    "    X_reduced = gaussian_rnd_proj.fit_transform(currData['train'])\n",
+    "\n",
+    "    print(X_reduced)"
    ]
   },
   {
@@ -97,6 +107,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run it exactly once"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -108,7 +125,7 @@
     "    trainX = setModifier.rmErgotPredictors(trainningData)\n",
     "\n",
     "    try:\n",
-    "        model = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=2)\n",
+    "        model = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=0)\n",
     "        rfecv = RFECV(estimator=model, n_jobs=1) # apply feature elimination/cross-validation to model\n",
     "        best_feat = rfecv.fit(trainX, trainY)\n",
     "        X_support = trainX.loc[:, best_feat.support_] # X_support now automatically holds the best subset\n",
@@ -123,12 +140,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run it multiple times to see when it would stop"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# do the same code above and loop on the 3 main data sets until no other attrs are removed"
+    "for currData in dataset2:\n",
+    "    trainningData = currData[\"train\"]\n",
+    "    trainY = trainningData[\"ergot_present_in_q4\"]\n",
+    "    trainX = setModifier.rmErgotFeatures(trainningData)\n",
+    "\n",
+    "    reducable = True        # controls the loop, is true by default then is determined by \n",
+    "                            # comparing the calculated set of features against the current set of features\n",
+    "    try:\n",
+    "        while reducable:\n",
+    "            model = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=0)\n",
+    "            rfecv = RFECV(estimator=model, n_jobs=1) # apply feature elimination/cross-validation to model\n",
+    "            best_feat = rfecv.fit(trainX, trainY)\n",
+    "            X_support = trainX.loc[:, best_feat.support_] # X_support now automatically holds the best subset\n",
+    "            \n",
+    "            # reduce the set to the subset proposed by the best features if we can\n",
+    "            if X_support.shape < trainX.shape:\n",
+    "                trainX = trainX[X_support.columns.tolist()]\n",
+    "            else:\n",
+    "                reducable = False\n",
+    "\n",
+    "        print(f'[SUCCESS] reduced data in dataset: {currData[\"desc\"]}')\n",
+    "        print(X_support.shape)  # tells you the best dimensions to use\n",
+    "        \n",
+    "        for col in X_support.columns.tolist():\n",
+    "            print(col)\n",
+    "        \n",
+    "        print()\n",
+    "    except Exception as e:\n",
+    "        pass"
    ]
   }
  ],
@@ -148,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.0"
   },
   "orig_nbformat": 4
  },
